Got spacing issues with material ui grid fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,9 +5,11 @@
 .container {
   max-width: 800px;
   margin: 0 auto;
+  padding: 10px;
 }
+
 @media (min-width: 1200px){
   .container{
-    max-width: 1200px;
+    max-width: 1000px;
   }
 }
